--- a/HeadlessBrowserCRM/packages.config
+++ b/HeadlessBrowserCRM/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.5" targetFramework="net461" />
   <package id="Microsoft.CrmSdk.Samples.HelperCode-CS" version="9.0.0.5" targetFramework="net461" />
+  <package id="Selenium.Firefox.WebDriver" version="0.22.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.43.0" targetFramework="net461" />
 </packages>
